test update for contrast issue

--- a/public/css/homepage.css
+++ b/public/css/homepage.css
@@ -136,7 +136,7 @@ body.bg-black .header-video-container::after {
     scale: .8;
     opacity: 0;
     transition: 0.35s padding;
-    background: linear-gradient(180deg, #2e3baf, #8d6dff);
+    background: black;
     padding: 15px;
     border-radius: 18px;
     box-shadow: 0 0 15px rgb(0,0,0,0.6);
